--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -28,18 +28,17 @@ jobs:
         run: |
           docker compose up -d
           ./scripts/wait-script.sh
+          sleep 30
         env:
           WAIT_PORTS: 8080,8070,8060,8050
-
-      # TODO setup variant, service and port
 
       - name: Run API Tests
         timeout-minutes: 5
         run: ./scripts/test-script.sh
         env:
-          VARIANT: <variant>
-          SERVICE_NAME: <your service name>
-          PORT_NUMBER: <port number>
+          VARIANT: v2
+          SERVICE_NAME: spread_gateway
+          PORT_NUMBER: 8080
 
       - uses: education/autograding@v1
         id: autograder
