--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -37,8 +37,8 @@ jobs:
         run: ./scripts/test-script.sh
         env:
           VARIANT: v2
-          SERVICE_NAME: spread_payment
-          PORT_NUMBER: 8060
+          SERVICE_NAME: spread_loyalty
+          PORT_NUMBER: 8050
 
       - uses: education/autograding@v1
         id: autograder
